<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <!--top arrow pointer box
        -->
        <androidx.cardview.widget.CardView
            android:id="@+id/top_view"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="left"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="17dp"
            app:cardElevation="6dp" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rectangle"
                app:srcCompat="?attr/actionModeCloseDrawable" />
        </androidx.cardview.widget.CardView>
<!--
toggle switch for night mode-->
        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-34dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/checkout_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-39dp"
            android:textAppearance="@style/checkout_text_appearance"
            android:text="@string/checkout"
            android:textAlignment="center"

            />

    </LinearLayout>
    <!--
    scrolling object
    -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:background="#ffffff"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="29dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <TextView
                        android:id="@+id/deliver_to_text"
                        android:layout_width="129dp"
                        android:layout_height="28dp"
                        android:layout_marginTop="0dp"
                        android:text="@string/deliver_to"
                        android:textAppearance="@style/deliver_to"
                        />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="50dp"
                        android:background="#E4F3F4"
                        app:srcCompat="@drawable/vector" />

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="263dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="58dp"
                        android:layout_marginTop="46dp"
                        android:text="@string/address"
                        android:textAppearance="@style/address"
                        />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="143dp"
                        android:layout_height="28dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/rectangle"
                        android:fontFamily="@font/poppins"
                        android:text="@string/change_address"
                        android:textAllCaps="false"
                        android:textColor="#6A515E" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

<!-- third box  for pament method-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="29dp"
                app:cardElevation="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="200dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/merriweather"
                        android:text="@string/payment_method"
                        android:textColor="#69515D"
                        android:textFontWeight="400"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/paymentIcon"
                        android:layout_width="42dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="36dp"
                        android:layout_marginBottom="64dp"
                        android:src="@drawable/vectorphoto"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/visa_card"
                        android:layout_width="206dp"
                        android:layout_height="62dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/visa_card"
                        android:textAppearance="@style/address"
                        app:layout_constraintBottom_toTopOf="@+id/button3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/paymentIcon"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/visa"
                        android:layout_width="62dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="144dp"
                        android:text="@string/visa"
                        android:textAppearance="@style/address"
                        app:layout_constraintBottom_toBottomOf="@+id/visa_card"
                        app:layout_constraintEnd_toEndOf="@+id/visa_card" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="141dp"
                        android:layout_height="34dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rectangle"
                        android:text="@string/use_others"
                        android:fontFamily="@font/merriweather"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.804"
                        app:layout_constraintStart_toStartOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <!-- box for Amount calculation-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="204dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="27dp"
                android:layout_marginRight="30dp"
                app:cardCornerRadius="29dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="265dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="0dp"
                        android:fontFamily="@font/merriweather"
                        android:text="@string/amount"
                        android:textColor="#69515D"
                        android:textFontWeight="400"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="42dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="22dp"
                        android:layout_marginTop="140dp"
                        android:text="@string/total"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:fontFamily="@font/merriweather"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/delivery"
                        android:layout_width="91dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="90dp"
                        android:text="@string/deliver_to"
                        android:textAppearance="@style/item_total_delivery" />

                    <TextView
                        android:id="@+id/item_total"
                        android:layout_width="98dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="59dp"
                        android:text="@string/item_total"
                        android:textAppearance="@style/item_total_delivery" />

                    <TextView
                        android:id="@+id/doller"
                        android:layout_width="48dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="59dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/item_total_fee"
                        android:textAppearance="@style/item_total_delivery" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="58dp"
                        android:layout_height="29dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="90dp"
                        android:text="@string/delivery_fee_value"
                        />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="138dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/total_fee_value"
                        android:textAppearance="@style/item_total_delivery_bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="6dp"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="122dp"
                        android:layout_marginBottom="53dp"
                        android:background="#EFEFF2" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


    <androidx.cardview.widget.CardView
        android:layout_width="402dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        app:cardCornerRadius="29dp"
        app:cardElevation="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="9dp">
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        <Button
            android:id="@+id/placeOrder"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/location_icon"
            android:text="@string/place_order"
            android:textAllCaps="false"
            android:textAppearance="@style/place_order" />


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>